# HTTPtoAMQPBridgeMiddleware

./: .env.example  .gitignore  CODE_REVIEW.md  Dockerfile  LICENSE  README.md  README.ua.md  REFACTORING_PLAN.md  WARP.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  manual_ci.yml
docs/: 1c_examples.md  operators_guide.md
plans/: dev_critical_fixes_plan.md  docker_errors_fix_plan.md  holistic_analysis.md  holistic_solution.md  implementation_plan.md  rmq_middleware_fix_plan.md  success_criteria.md
rabbitmq/: Dockerfile  definitions.json  rabbitmq.conf
scripts/: init_topology.py
src/rmq_middleware/: __init__.py  amqp_wrapper.py  circuit_breaker.py  config.py  main.py  middleware.py  models.py  routes.py  security.py
tests/: __init__.py  test_amqp_client.py  test_circuit_breaker.py  test_content_length_fix.py  test_integration.py  test_models.py  test_routes.py  test_security.py
