[project]
name = "rmq-middleware"
version = "1.0.0"
description = "Production-ready HTTP-to-AMQP bridge for ERP integration (1C:Enterprise)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aio-pika>=9.4.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rmq_middleware"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
