[project]
name = "rmq-middleware"
version = "1.0.0"
description = "Production-ready HTTP-to-AMQP bridge for ERP integration (1C:Enterprise)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "aio-pika>=9.4.0",
    "pydantic-settings>=2.1.0",
    "loguru>=0.7.2",
    "prometheus-fastapi-instrumentator>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rmq_middleware"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "testcontainers>=4.14.0",
    "ruff>=0.1.13",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
    "pip-audit>=1.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
ignore = ["S101", "B904", "C901", "S110", "S104"]
